Fixed aside element to align with grid

--- a/CSS/picture-grid.css
+++ b/CSS/picture-grid.css
@@ -1,12 +1,14 @@
 
 .picture-grid{
-  margin-top: 2rem;
+ margin-top: 2rem;
  display:inline-grid;
  grid-template-columns: repeat(5,15rem);
  grid-template-rows: 60% 40%;
  height:35rem;
-row-gap: 1rem;
-column-gap: .5rem;
+ row-gap: 1rem;
+ column-gap: 1rem;
+ border: 2px solid red;
+ flex-grow:1;
 }
 .first-box{
   grid-column: span 5;
@@ -59,10 +61,12 @@ column-gap: .5rem;
 
 .images-bottom-layer{
   height:55%;
-  width:95%;
+  width:100%;
   border-radius:5px;
 }
 .mini-text{
   margin-top:5px;
   font-weight: 700;
 }
+
+
